apps/base/home-assistant/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-assistant
  labels:
    app.kubernetes.io/name: home-assistant
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: home-assistant
  template:
    metadata:
      labels:
        app.kubernetes.io/name: home-assistant
    spec:
      containers:
        - name: home-assistant
          image: ghcr.io/home-assistant/home-assistant:2026.2.2 # {"$imagepolicy": "home-assistant:home-assistant"}
          ports:
            - name: http
              containerPort: 8123
              protocol: TCP
          volumeMounts:
            - name: home-assistant-config
              mountPath: /config
            - name: home-assistant-configuration
              mountPath: /config/configuration.yaml
              subPath: configuration.yaml
      volumes:
        - name: home-assistant-config
          persistentVolumeClaim:
            claimName: home-assistant-config
        - name: home-assistant-configuration
          configMap:
            name: home-assistant-configuration
