apps/base/home-assistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: home-assistant
  ports:
    - name: http
      port: 8123
      targetPort: http
      protocol: TCP
      appProtocol: kubernetes.io/ws
